--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucky Draw - Try your luck</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Lucky Draw- Try Your Luck</h1>
+    <div class="header">
+
+        <h1>Lucky Draw- Try Your Luck</h1>
+    </div>
+   
+    
+    <div class="container">
+        <input type="text" id="itm1">
+        <input type="text" id="itm2">
+        <input type="text" id="itm3">
+        <button id="btn">Click to try!</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
